# vie-voice-engine

./: .dockerignore  .env.docker.example  .env.example  .gitignore  API.md  ARCHITECTURE.md  BUGFIXES.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent.md  diagnose.py  docker-compose.yml  pyproject.toml  requirements.txt  test_comprehensive.py  test_ws.py
.github/agents/: vie-voice-pipeline.agent.md
.qwen/: settings.json
docs/: DOCKER.md  DOCKER_VIENEU_REMOTE.md  FAST_MODE_FIX.md  LLM_INTEGRATION.md  LLM_PROMPT_ENGINEERING.md  TROUBLESHOOTING.md  TTS_TEXT_NORMALIZATION.md  VIENEU_REMOTE_MODE.md  VIENEU_REMOTE_QUICKREF.md  VIENEU_TTS_03B.md  VIENEU_TTS_V2_TURBO.md
examples/: vieneu_03b_example.py  vieneu_remote_example.py
inferances_demo/asr/: infer_onnx.py  infer_pytorch.py
inferances_demo/tts/: inference.py  pyproject.toml
tests/: __init__.py  test_api.py  test_audio.py  test_config.py  test_session.py  test_streaming.py  test_text_normalization.py
voice_assistant/: __init__.py  config.py
voice_assistant/api/: __init__.py  server.py
voice_assistant/api/static/: index.html
voice_assistant/cli/: __init__.py  main.py
voice_assistant/core/: __init__.py  asr.py  asr_gipformer.py  asr_onnx.py  asr_pytorch.py  audio.py  llm.py  llm_base.py  llm_extended.py  llm_providers.py  llm_tasks.py  pipeline.py  session.py  streaming.py  tts.py  tts_gwen.py  tts_onnx.py  vad.py
voice_assistant/data/: ref_info.json
voice_assistant/utils/: __init__.py  logging.py  text_utils.py
